Trying to develop the contact section. FIX ME: TRY TO ALIGN IMAGE TO CENTER OF CARD AND IMPLEMENT A DISCONTINUOUS BORDER.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,9 +3,11 @@
 #showcase{
     position: relative;
     background: url("https://source.unsplash.com/random/1920x1080/?street-photography");
-    background-position: 0px -200px;
+    background-position: 0px 0px;
+    background-size: cover;
     background-repeat: no-repeat;
     min-height: 560px;
+    background-attachment: fixed;
 }
 
 .sticky-top {           //fixed the sticky top to make it stick to the actual top
@@ -47,6 +49,16 @@
     font-size: 0.8rem;
     text-align: right;
     margin-bottom: 0px;
+}
+
+#contact #profileHead {
+    margin-top: -135px;
+}
+
+
+#contact .card{
+    border-color: #000;
+
 }
 
 @media (max-width: 575px){
